# account-service

./: .env.dev  .env.docker.dev  .gitignore  .tool-versions  ENVIRONMENT.md  Makefile  README.md  docker-compose.yaml  endpoints.json  env.template  index.html  package-lock.json  package.json  swagger.json  tsconfig.json
.github/workflows/: build.yml  deploy-gh-pages.yaml
apps/api/src/: api.controller.ts  api.module.ts  api.service.ts  build-openapi.ts  main.ts  metadata.ts
apps/api/src/controllers/: accounts.controller.ts  api.controller.ts  delegation.controller.ts  handles.controller.ts  keys.controller.ts
apps/api/src/services/: accounts.service.ts  api.service.ts  delegation.service.ts  handles.service.ts  keys.service.ts
apps/api/test/: accounts.controller.e2e-spec.ts  app.e2e-spec.ts  handles.controller.e2e-spec.ts
apps/api/test/setup/: index.js  index.ts  package-lock.json
apps/worker/: tsconfig.app.json
apps/worker/src/: worker.module.ts
apps/worker/src/account_notifier/: account.monitor.processor.service.ts
apps/worker/src/account_publisher/: account.publisher.processor.service.ts
apps/worker/src/transaction_notifier/: notifier.module.ts  notifier.service.helper.createWebhookRsp.ts  notifier.service.helper.publishHandle.ts  notifier.service.ts  (+2 more)
docs/: account_service_arch.drawio  endpoints.json  index.html  webhook.endpoints.json
k6-scripts/: all-non-async-endpoints.js
k6-test/: account-service-load.js  new-sign-up.js
rust-webhook-server/: Cargo.toml
rust-webhook-server/src/: api.rs  main.rs
scripts/: restart-chain-docker.sh
(+23 files in other folders)
